# CMakeList.txt : CMake project for Lecture08, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Lecture08")

# Add source to this project's executable.
add_executable (Lecture08 "main.cpp" "villain.h")

# TODO: Add tests and install targets if needed.
